--- a/Playlist.Persister/Sciendo.PP/packages.config
+++ b/Playlist.Persister/Sciendo.PP/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net452" />
+  <package id="log4net" version="2.0.3" targetFramework="net452" />
+  <package id="Sciendo.Common" version="1.0.0-Build00019" targetFramework="net452" />
   <package id="TagLib.Portable" version="1.0.4" targetFramework="net452" />
 </packages>
