--- a/PlaylistTranslator/Sciendo.Playlist.Translator/packages.config
+++ b/PlaylistTranslator/Sciendo.Playlist.Translator/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="log4net" version="2.0.3" targetFramework="net452" />
   <package id="Sciendo.Common" version="1.0.0-Build00019" targetFramework="net452" />
+  <package id="Sciendo.Common.MySynchExtensions" version="1.0.0-Build00022" targetFramework="net452" />
 </packages>
