--- a/PlaylistTranslator/Sciendo.PT/Sciendo.PT.csproj
+++ b/PlaylistTranslator/Sciendo.PT/Sciendo.PT.csproj
@@ -45,6 +45,10 @@
       <HintPath>..\..\packages\Sciendo.Common.1.0.0-Build00019\lib\net40\Sciendo.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Sciendo.Common.MySynchExtensions, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Sciendo.Common.MySynchExtensions.1.0.0-Build00022\lib\net452\Sciendo.Common.MySynchExtensions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
