--- a/PlaylistTranslator/Sciendo.PT/packages.config
+++ b/PlaylistTranslator/Sciendo.PT/packages.config
@@ -3,4 +3,5 @@
   <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net452" />
   <package id="log4net" version="2.0.3" targetFramework="net452" />
   <package id="Sciendo.Common" version="1.0.0-Build00019" targetFramework="net452" />
+  <package id="Sciendo.Common.MySynchExtensions" version="1.0.0-Build00022" targetFramework="net452" />
 </packages>
