Second try at exposing the translator

--- a/PlaylistTranslator/Sciendo.PT/App.config
+++ b/PlaylistTranslator/Sciendo.PT/App.config
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="activeExtensions" type="Sciendo.Playlist.Translator.Configuration.ExtensionsPlaylistsConfigSection, Sciendo.Playlist.Translator" />
+    <section name="activeExtensions" type="Sciendo.Playlist.Translator.Configuration.ExtensionsPlaylistsConfigSection, Sciendo.Playlist.Translator"/>
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
   <activeExtensions>
     <extensions>
