Changed the translator to be config based

--- a/PlaylistTranslator/Sciendo.PT/App.config
+++ b/PlaylistTranslator/Sciendo.PT/App.config
@@ -2,10 +2,16 @@
 <configuration>
   <configSections>
     <section name="activeExtensions" type="Sciendo.Playlist.Translator.Configuration.ExtensionsPlaylistsConfigSection, Sciendo.Playlist.Translator"/>
+    <section name="findReplaceSection" type="Sciendo.Playlist.Translator.Configuration.FindAndReplaceConfigSection, Sciendo.Playlist.Translator"/>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
+  <findReplaceSection>
+    <fromToParams>
+      <add from="C:/Media/Music" to="C:/Users/octo/Music" priority="0"/>
+    </fromToParams>
+  </findReplaceSection>
   <activeExtensions>
     <extensions>
       <add key="m3u" value=".m3u"/>
