--- a/PlaylistTranslator/Sciendo.Playlist.Translator/Sciendo.Playlist.Translator.csproj
+++ b/PlaylistTranslator/Sciendo.Playlist.Translator/Sciendo.Playlist.Translator.csproj
@@ -36,7 +36,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="MySynch.Q.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\MySynch.Q.Common.1.0.0-CI00006\lib\net461\MySynch.Q.Common.dll</HintPath>
+      <HintPath>..\..\packages\MySynch.Q.Common.1.0.0-CI00007\lib\net461\MySynch.Q.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Sciendo.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -55,6 +55,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\ExtensionsPlaylistsConfigSection.cs" />
+    <Compile Include="Configuration\FindAndReplaceConfigSection.cs" />
+    <Compile Include="Configuration\FromToParamsElement.cs" />
+    <Compile Include="Configuration\FromToParamsElementCollection.cs" />
     <Compile Include="ITranslator.cs" />
     <Compile Include="PathEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
