--- a/PlaylistTranslator/Sciendo.Playlist.Translator/Sciendo.Playlist.Translator.csproj
+++ b/PlaylistTranslator/Sciendo.Playlist.Translator/Sciendo.Playlist.Translator.csproj
@@ -54,10 +54,13 @@
     <Compile Include="Configuration\FindAndReplaceConfigSection.cs" />
     <Compile Include="Configuration\FromToParamsElement.cs" />
     <Compile Include="Configuration\FromToParamsElementCollection.cs" />
+    <Compile Include="IBulkTranslator.cs" />
     <Compile Include="ITranslator.cs" />
     <Compile Include="PathEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BulkTranslator.cs" />
     <Compile Include="Translator.cs" />
+    <Compile Include="TranslatorBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Playlists\Sciendo.Playlists\Sciendo.Playlists.csproj">
