--- a/Tag2File/Sciendo.T2F/App.config
+++ b/Tag2File/Sciendo.T2F/App.config
@@ -1,12 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-    <section name="activeExtensions" type="Sciendo.T2F.Configuration.ExtensionsWithTagsConfigSection, Sciendo.T2F" />
+    <section name="tagsToFiles" type="Sciendo.T2F.Configuration.Tags2FilesConfigSection, Sciendo.T2F" />
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
-  <activeExtensions>
+  <tagsToFiles>
+    <rules>
+      <add type="Collection" pattern="%l\%n - %a - %t"/>
+      <add type="Individual" pattern="%a\%l\%n - %t"/>
+    </rules>
+    <action type="Move"/>
     <extensions>
       <add key="mp3" value=".mp3"/>
       <add key="ogg" value=".ogg"/>
@@ -14,5 +19,5 @@
       <add key="m4a" value=".m4a"/>
       <add key="wma" value=".wma"/>
     </extensions>
-  </activeExtensions>
+  </tagsToFiles>
 </configuration>
