--- a/Tag2File/Sciendo.T2F/Sciendo.T2F.csproj
+++ b/Tag2File/Sciendo.T2F/Sciendo.T2F.csproj
@@ -42,7 +42,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Sciendo.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Sciendo.Common.1.0.0-Build00023\lib\net40\Sciendo.Common.dll</HintPath>
+      <HintPath>..\..\packages\Sciendo.Common.1.0.0-Build00025\lib\net40\Sciendo.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -61,10 +61,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionType.cs" />
-    <Compile Include="Configuration\ExtensionsWithTagsConfigSection.cs" />
+    <Compile Include="Configuration\ActionTypeConfigurationElement.cs" />
+    <Compile Include="Configuration\ExtensionElement.cs" />
+    <Compile Include="Configuration\ExtensionsElementCollection.cs" />
+    <Compile Include="Configuration\Tags2FilesConfigSection.cs" />
+    <Compile Include="Configuration\RuleElement.cs" />
+    <Compile Include="Configuration\RuleElementCollection.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RuleType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
