Changed the pmp to get his own configuration

--- a/PlaylistMixx/Sciendo.Playlist.Mixx.DataAccess/Sciendo.Mixx.DataAccess.csproj
+++ b/PlaylistMixx/Sciendo.Playlist.Mixx.DataAccess/Sciendo.Mixx.DataAccess.csproj
@@ -37,6 +37,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite, Version=1.0.106.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.Data.SQLite.Core.1.0.106.0\lib\net451\System.Data.SQLite.dll</HintPath>
@@ -54,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\MixxxConfigurationSection.cs" />
     <Compile Include="DataHandler.cs" />
     <Compile Include="Domain\MixxxPlaylist.cs" />
     <Compile Include="Domain\MixxxPlaylistTrack.cs" />
