--- a/PlaylistMixx/Sciendo.PMP/App.config
+++ b/PlaylistMixx/Sciendo.PMP/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-    <section name="mixxx" type="Sciendo.PMP.Configuration.MixxxConfigurationSection, Sciendo.PMP" />
+    <section name="mixxx" type="Sciendo.Mixx.DataAccess.Configuration.MixxxConfigurationSection, Sciendo.Mixx.DataAccess" />
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
