took out all but taglib.portable

--- a/PlaylistMixx/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor.nuspec
+++ b/PlaylistMixx/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor.nuspec
@@ -9,8 +9,8 @@
 
     <!-- Optional elements -->
     <dependencies>
-      <!--<dependency id="Dapper" version="1.50.4" />-->
-      <dependency id="System.Data.SQLite.Core" version="1.0.106.0" />
+      <!--<dependency id="Dapper" version="1.50.4" />
+      <dependency id="System.Data.SQLite.Core" version="1.0.106.0" /> -->
       <dependency id="TagLib.Portable" version="1.0.4"  />
     </dependencies>
   </metadata>
