--- a/PlaylistMixx/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor.nuspec
+++ b/PlaylistMixx/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor.nuspec
@@ -16,6 +16,6 @@
   </metadata>
   <!-- Optional 'files' node -->
   <files>
-    <file src="bin\Release\*.dll" target="lib"/>
+    <file src="bin\Release\*.dll" target="/{framework name}[{version}]"/>
   </files>
 </package>
