took out any hard coding in the nuget package

--- a/PlaylistMixx/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor.nuspec
+++ b/PlaylistMixx/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor.nuspec
@@ -8,14 +8,14 @@
     <authors>Sciendo</authors>
 
     <!-- Optional elements -->
-    <dependencies>
-      <!--<dependency id="Dapper" version="1.50.4" />
-      <dependency id="System.Data.SQLite.Core" version="1.0.106.0" /> -->
+<!--    <dependencies>
+      <dependency id="Dapper" version="1.50.4" />
+      <dependency id="System.Data.SQLite.Core" version="1.0.106.0" />
       <dependency id="TagLib.Portable" version="1.0.4"  />
-    </dependencies>
+    </dependencies>-->
   </metadata>
   <!-- Optional 'files' node -->
-  <files>
+  <!--<files>
     <file src="bin\Release\*.dll" target="lib/net452"/>
-  </files>
+  </files>-->
 </package>
