updated sciendo.common and added the grouping by letter

--- a/Tag2File/Sciendo.T2F/App.config
+++ b/Tag2File/Sciendo.T2F/App.config
@@ -9,7 +9,7 @@
   <tagsToFiles>
     <rules>
       <add type="Collection" pattern="%l\%n - %a - %t"/>
-      <add type="Individual" pattern="%a\%l\%n - %t"/>
+      <add type="Individual" pattern="%z\%a\%l\%n - %t"/>
     </rules>
     <action type="Move"/>
     <extensions>
