--- a/Common/Sciendo.Common.Music.Tagging/Sciendo.Common.Music.Tagging.csproj
+++ b/Common/Sciendo.Common.Music.Tagging/Sciendo.Common.Music.Tagging.csproj
@@ -35,7 +35,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Sciendo.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Sciendo.Common.1.0.0-Build00027\lib\net40\Sciendo.Common.dll</HintPath>
+      <HintPath>..\..\packages\Sciendo.Common.1.0.0-Build00036\lib\net40\Sciendo.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -52,8 +52,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FsFileExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TagFileReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
