--- a/KeySequencer/Sciendo.KeySequencer.Repository.Tests.Unit/packages.config
+++ b/KeySequencer/Sciendo.KeySequencer.Repository.Tests.Unit/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="log4net" version="2.0.3" targetFramework="net452" />
   <package id="NUnit" version="3.8.1" targetFramework="net452" />
-  <package id="Sciendo.Common" version="1.0.0-Build00036" targetFramework="net452" />
+  <package id="Sciendo.Common" version="1.0.0.44" targetFramework="net452" />
 </packages>
