--- a/Tag2File/Sciendo.T2F/packages.config
+++ b/Tag2File/Sciendo.T2F/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net452" />
   <package id="log4net" version="2.0.3" targetFramework="net452" />
-  <package id="Sciendo.Common" version="1.0.0-Build00036" targetFramework="net452" />
+  <package id="Sciendo.Common" version="1.0.0.44" targetFramework="net452" />
   <package id="TagLib.Portable" version="1.0.4" targetFramework="net452" />
 </packages>
