--- a/PlaylistMixx/Sciendo.PMP.Tests.Unit/packages.config
+++ b/PlaylistMixx/Sciendo.PMP.Tests.Unit/packages.config
@@ -4,4 +4,5 @@
   <package id="NUnit" version="3.8.1" targetFramework="net452" />
   <package id="RhinoMocks" version="4.0.0-alpha3" targetFramework="net452" />
   <package id="Sciendo.Common" version="1.0.0.44" targetFramework="net452" />
+  <package id="TagLib.Portable" version="1.0.4" targetFramework="net452" />
 </packages>
