--- a/Common/Sciendo.Common.Music.Tagging/Sciendo.Common.Music.Tagging.csproj
+++ b/Common/Sciendo.Common.Music.Tagging/Sciendo.Common.Music.Tagging.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Sciendo.Common.Music.Tagging</RootNamespace>
     <AssemblyName>Sciendo.Common.Music.Tagging</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
