--- a/Loved2Playlist/Sciendo.Love2Playlist.Tests.Unit/packages.config
+++ b/Loved2Playlist/Sciendo.Love2Playlist.Tests.Unit/packages.config
@@ -3,4 +3,5 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="NUnit" version="3.8.1" targetFramework="net452" />
   <package id="RhinoMocks" version="4.0.0-alpha3" targetFramework="net452" />
+  <package id="TagLib.Portable" version="1.0.4" targetFramework="net452" />
 </packages>
