Loads of changes tweaking the rules for LIE

--- a/LibraryInformationExporter/LIE/App.config
+++ b/LibraryInformationExporter/LIE/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
+  <configSections>
+    <section name="libraryImporter" type="LIE.Configuration.LibraryImporterConfigurationSection, LIE"/>
+  </configSections>
+  <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <libraryImporter libraryRootFolder="C:\users\octo\Music\0-9\" reportFrequency="1000">
+    <extensions>
+      <add key="mp3" value=".mp3"/>
+      <add key="ogg" value=".ogg"/>
+      <add key="flac" value=".flac"/>
+      <add key="m4a" value=".m4a"/>
+      <add key="wma" value=".wma"/>
+    </extensions>
+    <dataFiles>
+      <notProcessed allTagsFile="allTags.csv" errorsFile="errors.csv"/>
+      <facts allArtistsFile ="allArtists.csv" allAlbumsFile="allAlbums.csv" allTracksFile="allTracks.csv"/>
+      <relations artistTrackFile="relationsArtistTrack.csv" albumTrackFile="relationsAlbumTrack.csv" composerTrackFile="relationsComposerTrack.csv" featuredArtistTrackFile="featuredArtistTrack.csv"/>
+      <temporary allFeaturedFile="allFeatured.csv" featuredArtistsNotFoundFile="featuredNotFoundArtists.csv"/>
+    </dataFiles>
+  </libraryImporter>
 </configuration>
