--- a/LibraryInformationExporter/LIE/LIE.csproj
+++ b/LibraryInformationExporter/LIE/LIE.csproj
@@ -33,16 +33,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommandLine, Version=2.0.275.0, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\CommandLineParser.2.1.1-beta\lib\net45\CommandLine.dll</HintPath>
+    </Reference>
     <Reference Include="CsvHelper, Version=12.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
       <HintPath>..\..\packages\CsvHelper.12.1.0\lib\net45\CsvHelper.dll</HintPath>
     </Reference>
     <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Sciendo.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Sciendo.Common.1.0.0.45\lib\net40\Sciendo.Common.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.ValueTuple.4.4.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
@@ -58,31 +65,43 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArtistNameExporterProgressEventArgs.cs" />
+    <Compile Include="Configuration\ExtensionElement.cs" />
+    <Compile Include="Configuration\ExtensionsElementCollection.cs" />
+    <Compile Include="Configuration\LibraryImporterConfigurationSection.cs" />
     <Compile Include="DataTypes\AlbumWithLocation.cs" />
     <Compile Include="AlbumWithLocationEqualityComparer.cs" />
     <Compile Include="ArtistNameExporter.cs" />
-    <Compile Include="ArtistNameMutations.cs" />
-    <Compile Include="FilesCollector.cs" />
+    <Compile Include="DataTypes\AlbumWithLocationAndTracks.cs" />
+    <Compile Include="DataTypes\ArtistWithTracks.cs" />
+    <Compile Include="DataTypes\TrackByArtist.cs" />
+    <Compile Include="Extensions.cs" />
+    <Compile Include="IOManager.cs" />
     <Compile Include="DataTypes\FileWithTags.cs" />
     <Compile Include="DataTypes\RelationArtistTrack.cs" />
+    <Compile Include="KnowledgeBase.cs" />
+    <Compile Include="Options.cs" />
+    <Compile Include="ProgressAccumulator.cs" />
     <Compile Include="RelationArtistTrackComparer.cs" />
     <Compile Include="RelationArtistTrackMap.cs" />
     <Compile Include="DataTypes\RelationComposerTrack.cs" />
     <Compile Include="Mappers\RelationComposerTrackMap.cs" />
     <Compile Include="RelationsBuilder.cs" />
     <Compile Include="DataTypes\RelationTrackAlbum.cs" />
-    <Compile Include="ProgressEventArgs.cs" />
-    <Compile Include="DataTypes\ArtistRole.cs" />
-    <Compile Include="DataTypes\ArtistWithRole.cs" />
+    <Compile Include="TagProviderProgressEventArgs.cs" />
+    <Compile Include="DataTypes\ArtistType.cs" />
     <Compile Include="ArtistWithRoleEqualityComparer.cs" />
-    <Compile Include="DataTypes\ArtistWithRoles.cs" />
+    <Compile Include="DataTypes\Artist.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mappers\RelationTrackAlbumMap.cs" />
     <Compile Include="DataTypes\TrackWithFile.cs" />
+    <Compile Include="TagsProvider.cs" />
+    <Compile Include="DataTypes\TrackWithArtists.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="artistnamemutations.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
