--- a/LibraryInformationExporter/LIE/packages.config
+++ b/LibraryInformationExporter/LIE/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net452" />
   <package id="CsvHelper" version="12.1.0" targetFramework="net452" />
   <package id="log4net" version="2.0.3" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
   <package id="Sciendo.Common" version="1.0.0.45" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
   <package id="TagLib.Portable" version="1.0.4" targetFramework="net452" />
