after p,r and compils

--- a/LibraryInformationExporter/LIE/App.config
+++ b/LibraryInformationExporter/LIE/App.config
@@ -6,7 +6,7 @@
   <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
-  <libraryImporter libraryRootFolder="C:\users\octo\Music\Oldies-Compilations\" reportFrequency="1000">
+  <libraryImporter libraryRootFolder="C:\users\octo\Music\Rock-Compilations\" reportFrequency="1000">
     <extensions>
       <add key="mp3" value=".mp3"/>
       <add key="ogg" value=".ogg"/>
