A bit of cleanup

--- a/LibraryInformationExporter/LIE/App.config
+++ b/LibraryInformationExporter/LIE/App.config
@@ -6,7 +6,7 @@
   <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
-  <libraryImporter libraryRootFolder="C:\users\octo\Music\z\Zwan\Mary Star Of The Sea" reportFrequency="1000">
+  <libraryImporter libraryRootFolder="C:\users\octo\Music\" reportFrequency="1000">
     <extensions>
       <add key="mp3" value=".mp3"/>
       <add key="ogg" value=".ogg"/>
@@ -18,7 +18,6 @@
       <notProcessed allTagsFile="allTags.csv" errorsFile="errors.csv"/>
       <facts allArtistsFile ="allArtists.csv" allAlbumsFile="allAlbums.csv" allTracksFile="allTracks.csv"/>
       <relations artistTrackFile="relationsArtistTrack.csv" albumTrackFile="relationsAlbumTrack.csv" composerTrackFile="relationsComposerTrack.csv" featuredArtistTrackFile="featuredArtistTrack.csv"/>
-      <temporary allFeaturedFile="allFeatured.csv" featuredArtistsNotFoundFile="featuredNotFoundArtists.csv"/>
     </dataFiles>
   </libraryImporter>
 </configuration>
