--- a/LibraryInformationExporter/LIE/LIE.csproj
+++ b/LibraryInformationExporter/LIE/LIE.csproj
@@ -43,7 +43,7 @@
       <HintPath>..\..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.12.0.2-beta1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Sciendo.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Sciendo.Common.1.0.0.45\lib\net40\Sciendo.Common.dll</HintPath>
@@ -80,10 +80,14 @@
     <Compile Include="DataTypes\FileWithTags.cs" />
     <Compile Include="DataTypes\RelationArtistTrack.cs" />
     <Compile Include="KnowledgeBase.cs" />
+    <Compile Include="Mappers\AlbumWithLocationMap.cs" />
+    <Compile Include="Mappers\ArtistMap.cs" />
+    <Compile Include="Mappers\ArtistTypeConvertor.cs" />
+    <Compile Include="Mappers\StringMap.cs" />
+    <Compile Include="Mappers\TrackWithFileMap.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="ProgressAccumulator.cs" />
-    <Compile Include="RelationArtistTrackComparer.cs" />
-    <Compile Include="RelationArtistTrackMap.cs" />
+    <Compile Include="Mappers\RelationArtistTrackMap.cs" />
     <Compile Include="DataTypes\RelationComposerTrack.cs" />
     <Compile Include="Mappers\RelationComposerTrackMap.cs" />
     <Compile Include="RelationsBuilder.cs" />
@@ -101,7 +105,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="artistnamemutations.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
