Changed the generation of Labels for Artists

--- a/LibraryInformationExporter/LIE/App.config
+++ b/LibraryInformationExporter/LIE/App.config
@@ -3,10 +3,10 @@
   <configSections>
     <section name="libraryImporter" type="LIE.Configuration.LibraryImporterConfigurationSection, LIE"/>
   </configSections>
-  <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
-  <libraryImporter libraryRootFolder="C:\users\octo\Music\z\" reportFrequency="1000" knowledgeBase="knowledgeBase.json">
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <libraryImporter libraryRootFolder="C:\users\octo\Music\" reportFrequency="1000" knowledgeBase="knowledgeBase.json">
     <extensions>
       <add key="mp3" value=".mp3"/>
       <add key="ogg" value=".ogg"/>
