--- a/LibraryClassifier/LIC/LIC.csproj
+++ b/LibraryClassifier/LIC/LIC.csproj
@@ -20,7 +20,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
-    <PackageReference Include="Sciendo.ArtistClassifier" Version="1.0.0-Build00024" />
+    <PackageReference Include="Sciendo.ArtistClassifier" Version="1.0.0-Build00033" />
     <PackageReference Include="Sciendo.Config" Version="1.0.0-Build00001" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
@@ -28,16 +28,22 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="KnowledgeBase\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <None Update="KnowledgeBase\newknowledgebase.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>newknowledgebase.json</LastGenOutput>
+    </None>
     <None Update="KnowledgeBase\newknowledgebase.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>newknowledgebase.tt</DependentUpon>
     </None>
     <None Update="LIC.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
 </Project>
