Add the property to copy

--- a/LibraryClassifier/LIC/LIC.csproj
+++ b/LibraryClassifier/LIC/LIC.csproj
@@ -36,6 +36,7 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>newknowledgebase.tt</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="LIC.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
