--- a/LibraryClassifier/LIC/LIC.csproj
+++ b/LibraryClassifier/LIC/LIC.csproj
@@ -21,7 +21,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
     <PackageReference Include="Sciendo.ArtistClassifier" Version="1.0.0-Build00033" />
-    <PackageReference Include="Sciendo.Config" Version="1.0.0-Build00001" />
+    <PackageReference Include="Sciendo.Config" Version="1.0.6" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
